--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "gen-types": "npx supabase gen types typescript --project-id=rjvyvrfdntrcodrcnhap > src/utils/supabase/types.autogen.ts"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.20.5",
     "@tanstack/react-query-devtools": "^5.20.5",
     "autoprefixer": "10.4.17",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "geist": "^1.2.1",
+    "lucide-react": "^0.331.0",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
   },
   "devDependencies": {
