--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gen-types": "npx supabase gen types typescript --project-id=rjvyvrfdntrcodrcnhap > src/utils/supabase/types.autogen.ts"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
