--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "gen-types": "npx supabase gen types typescript --project-id=rjvyvrfdntrcodrcnhap > src/utils/supabase/types.autogen.ts"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.20.5",
     "@tanstack/react-query-devtools": "^5.20.5",
+    "@tanstack/react-table": "^8.12.0",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
