--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gen-types": "npx supabase gen types typescript --project-id=rjvyvrfdntrcodrcnhap > src/utils/supabase/types.autogen.ts"
   },
   "dependencies": {
+    "@nivo/calendar": "^0.84.0",
+    "@nivo/core": "^0.84.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
