--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.2.6",
     "geist": "^1.2.1",
     "lucide-react": "^0.331.0",
     "next": "latest",
