--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@tanstack/react-query-devtools": "^5.20.5",
     "@tanstack/react-table": "^8.12.0",
     "autoprefixer": "10.4.17",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.2.6",
     "geist": "^1.2.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.331.0",
     "next": "latest",
     "postcss": "8.4.33",
