amp up the cron job to test. add roundup email api route

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "crons": [{
     "path": "/api/cron/scrape-articles",
-    "annotation": "every hour on the hour",
-    "schedule": "0 * * * *"
+
+    "x-annotation": "every hour on the hour",
+    "x-schedule": "0 * * * *",
+
+    "annotation": "every minute",
+    "schedule": "* * * * *"
   }]
 }
